--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="saints">#8734d1</color>
     <color name="disrespect">#f832c0</color>
     <color name="disrespectBlue">#509cda</color>
+    <color name="defpurple">#A86BD5</color>
 
 
     <color name="invInferno">#bb052d</color>
