--- a/app/src/main/res/layout/fragment_aospex.xml
+++ b/app/src/main/res/layout/fragment_aospex.xml
@@ -29,7 +29,10 @@
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="324dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/aospex"
                 app:layout_constraintEnd_toEndOf="parent"
