--- a/app/src/main/res/layout/fragment_autumn.xml
+++ b/app/src/main/res/layout/fragment_autumn.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -29,7 +30,10 @@
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="324dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/autumn"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,18 +69,15 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:layout_marginBottom="8dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:onClick="downloadParser"
                 android:tag="19"
                 app:cardBackgroundColor="#fff87000"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView13"
-                app:layout_constraintVertical_bias="0.0"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:layout_constraintTop_toBottomOf="@+id/textView13">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -93,7 +94,7 @@
                         android:layout_marginRight="8dp"
                         android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:text="@string/version_autumn"
+                        android:text="@string/download"
                         android:textColor="#000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -103,38 +104,20 @@
 
             </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:fontFamily="@font/timeburnernormal"
-                android:gravity="center"
-                android:text="@string/lastUpdate_autumn"
-                android:textSize="14sp"
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView4" />
-
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView5"
                 android:layout_width="0dp"
                 android:layout_height="110dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4">
+                app:layout_constraintTop_toBottomOf="@+id/cardView4">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
