--- a/app/src/main/res/layout/fragment_phlox.xml
+++ b/app/src/main/res/layout/fragment_phlox.xml
@@ -140,6 +140,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <ImageView
+                        android:id="@+id/imageView29"
+                        android:layout_width="50dp"
+                        android:layout_height="55dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="35dp"
+                        android:layout_marginBottom="50dp"
+                        android:onClick="openDefPurple"
+                        android:scaleType="fitCenter"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textView14"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        app:srcCompat="@drawable/ic_lens_defpurple" />
+
+                    <TextView
+                        android:id="@+id/textView57"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginBottom="15dp"
+                        android:fontFamily="@font/timeburnernormal"
+                        android:gravity="center"
+                        android:onClick="openDefPurple"
+                        android:text="Definetly\nPurple"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView29"
+                        app:layout_constraintStart_toStartOf="@+id/imageView29"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
                     <TextView
                         android:id="@+id/textView14"
                         android:layout_width="wrap_content"
@@ -162,17 +198,17 @@
                         android:id="@+id/imageView6"
                         android:layout_width="50dp"
                         android:layout_height="55dp"
-                        android:layout_marginStart="152dp"
-                        android:layout_marginLeft="152dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_marginTop="35dp"
-                        android:layout_marginEnd="50dp"
-                        android:layout_marginRight="50dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"
                         android:layout_marginBottom="50dp"
                         android:onClick="openDisrespect"
                         android:scaleType="fitCenter"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/imageView7"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView29"
                         app:layout_constraintTop_toBottomOf="@+id/textView14"
                         app:srcCompat="@drawable/ic_square_disrespect" />
 
@@ -180,11 +216,11 @@
                         android:id="@+id/imageView7"
                         android:layout_width="50dp"
                         android:layout_height="55dp"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginLeft="50dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_marginTop="35dp"
-                        android:layout_marginEnd="152dp"
-                        android:layout_marginRight="152dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"
                         android:layout_marginBottom="50dp"
                         android:onClick="openSaints"
                         android:scaleType="fitCenter"
